Refactor solve_and_simulate function to include grid parameters for K and I, enhancing clarity and usability

--- a/Code/time-dep_problem_analysis.ipynb
+++ b/Code/time-dep_problem_analysis.ipynb
@@ -130,45 +130,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bb26ae02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve_and_simulate(K0, Tsim, gamma_path, delta_path, A, alpha, beta, h_of_t, K_grid, I_grid, K_next):\n",
+    "def solve_and_simulate(K0, Kmin, Kmax, nK, Imin, Imax, nI, Tsim, gamma_path, delta_path, A, alpha, beta, h_of_t, K_grid, I_grid, K_next):\n",
+    "\n",
+    "    # these arguments correspond to:\n",
+    "        # K0: initial capital\n",
+    "        # Kmin, Kmax: min and max of K_grid\n",
+    "        # nK: number of grid points for K\n",
+    "        # Imin, Imax: min and max of I_grid\n",
+    "        # nI: number of grid points for I\n",
+    "        # Tsim: number of time periods to simulate\n",
+    "        # gamma_path: array of length Tsim with investment cost parameter for each t\n",
+    "        # delta_path: array of length Tsim with depreciation rate for each t\n",
+    "        # A, alpha, beta: model parameters\n",
+    "        # h_of_t: the function h(K,I,t) that computes period payoff (evaluated on a grid of different values of I)\n",
+    "        # K_grid, I_grid: grids for state and control variables\n",
+    "        # K_next: function to compute next period capital\n",
+    "\n",
+    "    #### SET UP THE GRID TO DO THE OPTIMISATION OVER\n",
+    "\n",
+    "    # set the state and control grids\n",
+    "    K_grid = np.linspace(Kmin, Kmax, nK)\n",
+    "    I_grid = np.linspace(Imin, Imax, nI)\n",
     "\n",
     "    #### DO BACKWARD INDUCTION TO SOLVE THE TIME-DEPENDENT PROBLEM\n",
     "\n",
-    "    # V[t, iK] holds value at time t for K_grid[iK]; V[Tsim,:] is terminal value = 0\n",
+    "    # V[t, iK] will hold value at time t for K_grid[iK]\n",
+    "    # V[Tsim,:] is terminal value = 0\n",
     "    V = np.zeros((Tsim + 1, nK))\n",
-    "    policy_I_idx = np.zeros((Tsim, nK), dtype=int)  # index of optimal I for each (t, K_index)\n",
     "\n",
-    "    # Backwards loop\n",
+    "    # policy_I_idx[t, iK] will hold index of optimal I in I_grid for each (t, K_grid[iK])\n",
+    "    policy_I_idx = np.zeros((Tsim, nK), dtype=int)\n",
+    "\n",
+    "    # now start the backwards loop that calculates V and policy_I_idx for the prior period, given V in the next\n",
     "    # note that we keep V[Tsim, :] = 0 as the terminal condition: this is the transversality condition (TVC)\n",
-    "    for t in range(Tsim - 1, -1, -1):  # t = Tsim-1, ..., 0\n",
-    "        # create interpolator for V[t+1, .]\n",
+    "\n",
+    "    for t in range(Tsim - 1, -1, -1):  # i.e. t = Tsim-1, ..., 0\n",
+    "\n",
+    "        # create interpolator for V[t+1, .], taking the values of V for each K in K_grid and linearly interpolating\n",
     "        Vnext_interp = interp1d(K_grid, V[t + 1], kind='linear', fill_value='extrapolate', assume_sorted=True)\n",
+    "\n",
+    "        # get the current time-dependent parameters\n",
     "        delta_t = delta_path[t]\n",
-    "        # loop across K grid\n",
+    "\n",
+    "        # loop across K grid to get the V and the policy I for each value of K\n",
     "        for iK, K in enumerate(K_grid):\n",
     "\n",
-    "            # compute feasible K' for each candidate I (vector)\n",
+    "            # compute feasible K' for each candidate I (giving a vector) and the given K\n",
     "            Knext = K_next(K, I_grid, delta_t)\n",
     "\n",
-    "            # clip onto interpolation domain (alternatively expand K_grid to avoid clipping)\n",
+    "            # clip onto interpolation domain (i.e. if K>Kmax then set to Kmax, and same for Kmin)\n",
     "            Knext_clipped = np.clip(Knext, Kmin, Kmax)\n",
     "\n",
-    "            # calculate continuation value for each candidate I\n",
+    "            # calculate continuation value (i.e. next period V) for each candidate I, given the corresponding K'\n",
     "            cont_val = Vnext_interp(Knext_clipped)        # V[t+1](K') vector of length nI\n",
     "\n",
-    "            # immediate payoff vector for all candidate I (length nI)\n",
+    "            # calculate the immediate payoff vector for all candidate I (again a vector of length nI)\n",
     "            h_vec = h_of_t(K, I_grid, t)\n",
+    "\n",
+    "            # get the total RHS value of the Bellman equation, and then the index of the I that maximises it\n",
     "            total = h_vec + beta * cont_val               # total value for each I\n",
     "            jstar = int(np.argmax(total))                 # index of best I\n",
+    "\n",
+    "            # store the value and policy function index for the given K\n",
     "            V[t, iK] = total[jstar]\n",
     "            policy_I_idx[t, iK] = jstar\n",
     "\n",
-    "        # Optionally print progress\n",
+    "        # after looping over all K, we have found the optimal investment function and the value function in time t given K_t\n",
+    "        # the value function is then used in the next loop to get the next period's functions, and so on\n",
+    "\n",
+    "        # print the progress\n",
     "        if (t % 10) == 0:\n",
     "            print(f'Backward step done: t={t}')\n",
     "\n",
@@ -233,28 +268,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f8df6c5",
-   "metadata": {},
-   "source": [
-    "Set up the grids to do the numerical optimisation over"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "047a5ce7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set the state and control grids\n",
-    "Kmin, Kmax, nK = 0.1, 10.0, 1000\n",
-    "K_grid = np.linspace(Kmin, Kmax, nK)\n",
-    "Imin, Imax, nI = 0.0, 2.5, 1000\n",
-    "I_grid = np.linspace(Imin, Imax, nI)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "45e95d97",
    "metadata": {},
    "source": [
@@ -263,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a9563f9a",
    "metadata": {},
    "outputs": [
@@ -322,8 +335,10 @@
     "gamma_path = np.linspace(1, 1, Tsim)**2  # constant investment cost over time\n",
     "delta_path = np.linspace(0.05, 0.05, Tsim)  # constant depreciation over time\n",
     "K0 = 10  # choose initial capital within [Kmin, Kmax] - we want it to start high\n",
+    "Kmin, Kmax, nK = 0.1, 10.0, 1000\n",
+    "Imin, Imax, nI = 0.0, 2.5, 1000\n",
     "\n",
-    "# precalculate payoff function depending on time t, h(K,I,t), vectorised in I\n",
+    "# define payoff function depending on time t, h(K,I,t), vectorised in I\n",
     "def h_of_t(K, I_grid, t):\n",
     "    gamma_t = gamma_path[t]\n",
     "    return A * (K**alpha) - gamma_t * I_grid\n",
@@ -332,7 +347,7 @@
     "def K_next(K, I_grid, delta_t):\n",
     "    return (1.0 - delta_t) * K + I_grid\n",
     "\n",
-    "solve_and_simulate(K0, Tsim, gamma_path, delta_path, A, alpha, beta, h_of_t, K_grid, I_grid, K_next)"
+    "solve_and_simulate(K0, Kmin, Kmax, nK, Imin, Imax, nI, Tsim, gamma_path, delta_path, A, alpha, beta, h_of_t, K_grid, I_grid, K_next)"
    ]
   },
   {
