Enhance model description with specific functional forms and clarify time-dependence in investment cost and depreciation

--- a/Code/time-dep_problem_analysis.ipynb
+++ b/Code/time-dep_problem_analysis.ipynb
@@ -288,7 +288,10 @@
    "id": "45e95d97",
    "metadata": {},
    "source": [
-    "I now use this function to solve the model with some baseline parameter values: first the most basic, with no explicit time-dependence in either $f$ or $h$. \n",
+    "I now use this function to solve the model with some baseline parameter values: first the most basic, with no explicit time-dependence in either $f$ or $h$. In particular, the specific functional forms of $f$ and $h$ that I use are as follows:\n",
+    "$$h(K_t, I_t) = AK_t^\\alpha - \\gamma_t I_t$$\n",
+    "$$f(K_t, I_t) = (1-\\delta_t) K_t + I_t$$\n",
+    "where $A$ gives the 'efficiency' with which an agent uses their capabilities, $\\alpha \\in (0,1)$ reflects diminishing returns in happiness to the size of the capability stock, $\\gamma_t$ reflects the contemporaneous investment cost, and $\\delta_t$ represents depreciation of the existing capability stock. In this model, $\\gamma_t \\equiv \\gamma$ and $\\delta_t \\equiv \\delta$.\n",
     "\n",
     "Note that we start with the capability stock high, at Kmax, to reflect the fact that children have a family around them who provide them with 'everything they need'."
    ]
@@ -364,7 +367,7 @@
    "id": "2ada384d",
    "metadata": {},
    "source": [
-    "Now solve the model where now the depreciation rate is an increasing linear function of time"
+    "Now solve the model where now the depreciation rate is an increasing linear function of time: $\\delta_t = \\delta_0 + \\delta_1 t$"
    ]
   },
   {
@@ -413,7 +416,7 @@
    "id": "1db6878e",
    "metadata": {},
    "source": [
-    "Now solve the model with an increasing investment cost, but constant depreciation"
+    "Now solve the model with an increasing investment cost, but constant depreciation. The investment cost will increase quadratically in $t$: $\\gamma_t = (\\gamma_0 + \\gamma_1 t)^2$"
    ]
   },
   {
