Refactor notebook title and enhance problem description for clarity in happiness U-shape modeling

--- a/Code/time-dep_problem_analysis.ipynb
+++ b/Code/time-dep_problem_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "0bbfe495",
    "metadata": {},
    "source": [
-    "## Solving dynamic finite-horizon optimisation problems recursively"
+    "## Modelling the happiness U-shape (using dynamic programming)"
    ]
   },
   {
@@ -43,12 +43,12 @@
    "source": [
     "The goal of this notebook is to attempt to establish a mathematical foundation for the U-shape in individual wellbeing/happiness over the lifespan.\n",
     "\n",
-    "To do this, I focus on the following general problem of optimal investment into 'capabilities' to maximise present discounted value of happiness across the lifespan, subject to a law of motion for capabilities:\n",
+    "To do this, I focus on the following general finite-horizon problem of optimal investment into 'capabilities' to maximise present discounted value of happiness across the lifespan, subject to a law of motion for capabilities:\n",
     "\n",
     "$$\\underset{{K_{t+1}, I_t}}{max} \\sum^T_{t=0}\\beta^t h(K_t, I_t, t)$$\n",
     "$$s.t. \\: K_{t+1} = f(K_t, I_t, t) \\: \\forall t$$\n",
     "\n",
-    "where $K_t$ represents the agent's stock of capabilities (with $K_0$ exogenously fixed), $I_t$ represents their period-$t$ investment into building capabilities, and $h(K_t, I_t), t$ represents the agent's happiness in a given period $t$ with capabilities $K_t$ and contemporaneous investment $I_t$.\n",
+    "where $K_t$ represents the agent's stock of capabilities (with $K_0$ exogenously fixed), $I_t$ represents their period-$t$ investment into building capabilities, and $h(K_t, I_t), t$ represents the agent's happiness in a given period $t$ with capabilities $K_t$ and contemporaneous investment $I_t$. This setup closely resembles a firm's investment problem, hence the similar notation.\n",
     "\n",
     "This is a problem of reverse engineering (i.e. an inverse problem): the objective is to find functions $h, f$ such that when this problem is solved for optimal $\\tilde{K}_t, \\tilde{I}_t$, the resulting happiness trajectory $h(\\tilde{K}_t, \\tilde{I}_t)$ is U-shaped."
    ]
@@ -120,7 +120,9 @@
    "id": "0d0cc941",
    "metadata": {},
    "source": [
-    "I solve this problem by expressing it as a Bellman equation and solving via backward induction. The Bellman equation is as follows:\n",
+    "I solve this problem using dynamic programming: I express it as a Bellman equation and solve it via backward induction. \n",
+    "\n",
+    "The Bellman equation is as follows:\n",
     "$$V(K_t, t) = \\underset{{K_{t+1}, I_t}}{max} \\: h(K_t, I_t) + \\beta V(K_{t+1}, t+1)$$\n",
     "$$s.t. \\: K_{t+1} = f(K_t, I_t, t)$$\n",
     "\n",
