Enhance problem description in time-dep_problem_analysis.ipynb to specify types of 'capabilities' considered for maximizing happiness.

--- a/Code/time-dep_problem_analysis.ipynb
+++ b/Code/time-dep_problem_analysis.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "The goal of this notebook is to attempt to establish a mathematical foundation for the U-shape in individual wellbeing/happiness over the lifespan.\n",
     "\n",
-    "To do this, I focus on the following general finite-horizon problem of optimal investment into 'capabilities' to maximise present discounted value of happiness across the lifespan, subject to a law of motion for capabilities:\n",
+    "To do this, I focus on the following general finite-horizon problem of optimal investment into 'capabilities' (health, wisdom, social networks, wealth, etc) to maximise present discounted value of happiness across the lifespan, subject to a law of motion for capabilities:\n",
     "\n",
     "$$\\underset{{K_{t+1}, I_t}}{max} \\sum^T_{t=0}\\beta^t h(K_t, I_t, t)$$\n",
     "$$s.t. \\: K_{t+1} = f(K_t, I_t, t) \\: \\forall t$$\n",
