troubleshooting the setup function

--- a/Code/time-dep_problem_analysis.ipynb
+++ b/Code/time-dep_problem_analysis.ipynb
@@ -168,13 +168,14 @@
     "        # after looping over all K, we have found the optimal investment function and the value function in time t given K_t\n",
     "        # the value function is then used in the next loop to get the next period's functions, and so on\n",
     "\n",
-    "    print(V[1,])\n",
-    "    print(\"now t=2\")\n",
-    "    print(V[2,])\n",
-    "    print(\"now the I\")\n",
-    "    print(policy_I_idx[1,])\n",
-    "    print(\"now t=2 I\")\n",
-    "    print(policy_I_idx[2,])\n",
+    "    # # some printouts to check things are working\n",
+    "    # print(V[1,])\n",
+    "    # print(\"now t=2\")\n",
+    "    # print(V[2,])\n",
+    "    # print(\"now the I\")\n",
+    "    # print(policy_I_idx[1,])\n",
+    "    # print(\"now t=2 I\")\n",
+    "    # print(policy_I_idx[2,])\n",
     "\n",
     "    # optional progress printout\n",
     "    #     # print the progress\n",
