Extended the new interpretation

--- a/Code/time-dep_problem_analysis.ipynb
+++ b/Code/time-dep_problem_analysis.ipynb
@@ -268,7 +268,7 @@
    "metadata": {},
    "source": [
     "I now use this function to solve the model with some baseline parameter values: first the most basic, with no explicit time-dependence in either $f$ or $h$. In particular, the specific functional forms of $f$ and $h$ that I use are as follows:\n",
-    "$$h(K_t, I_t) = AK_t^\\alpha - \\gamma_t I_t$$\n",
+    "$$h(K_t, I_t) = AK_t^\\alpha - \\gamma_t I_t^2$$\n",
     "$$f(K_t, I_t) = (1-\\delta_t) K_t + I_t$$\n",
     "where $A$ gives the 'efficiency' with which an agent uses their capabilities, $\\alpha \\in (0,1)$ reflects diminishing returns in happiness to the size of the capability stock, $\\gamma_t$ reflects the contemporaneous investment cost, and $\\delta_t$ represents depreciation of the existing capability stock. In this model, $\\gamma_t \\equiv \\gamma$ and $\\delta_t \\equiv \\delta$.\n",
     "\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "560800e3",
    "metadata": {},
    "outputs": [
@@ -483,10 +483,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0723c69",
+   "id": "19c242f0",
    "metadata": {},
    "source": [
-    "NEED TO INTERPRET FROM HERE - THE PREVIOUS BITS ARE UP TO DATE"
+    "The dominating feature here is the time-dependent depreciation: we get a similar profile as in the case before. The difference is that investment drops faster after 'giving up', which leads to a clearer peak in investment, and a quicker fall in happiness as a result"
    ]
   },
   {
@@ -494,11 +494,53 @@
    "id": "1c69387e",
    "metadata": {},
    "source": [
-    "Qualitatively this is better - we have some convex behaviour. However, the happiness trajectory is still decreasing. The natural reason for this is that in the final periods it is clearly optimal to run the capabilities stock down to zero, because agents know when they will die and only internalise their intertemporal payoffs.\n",
+    "Note that qualitatively we see a lot of useful features here, that both fit with intuition and also help generate a U. However, the happiness trajectory is still decreasing beyond the point of giving up. The natural reason for this is that in the final periods it is clearly optimal to run the capabilities stock down to zero, because agents know when they will die and only internalise their intertemporal payoffs.\n",
     "\n",
     "As such, it may be necessary to introduce an inter-generational incentive to preserve capabilities into old-age, for example to pass on to children/grandchildren.\n",
     "\n",
-    "This could even be extended to a general equilibrium model of a society collectively aiming to optimally allocate happiness, with intergenerational motives and societal resource constraints and GE conditions"
+    "This could even be extended to a general equilibrium model of a society collectively aiming to optimally allocate happiness, with intergenerational motives and societal resource constraints and GE conditions\n",
+    "\n",
+    "Alternatively, we may have to rethink how we conceptualise the time periods - we have to deal with the fact that the lifespan is uncertain in length, and therefore that these periods are sort of meaningless in some sense"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a2d281",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a30028e6",
+   "metadata": {},
+   "source": [
+    "### Notes and questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6109a313",
+   "metadata": {},
+   "source": [
+    "We get some weird behaviour when changing the parameters - contradicts the limits I set for the capital stock. Why is this? Need to work out what's happening - maybe something with the solution function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9c735c8",
+   "metadata": {},
+   "source": [
+    "It is important to realise the investment schedule we are trying to generate in order to get this happiness U-shape: starts low, then increases, then plateaus/decreases. It is worth thinking about the problem in these terms too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7cbb214",
+   "metadata": {},
+   "source": [
+    "Question: what is stopping individuals in this model from just accepting that old age will be a period of unhappiness because it is costly to maintain happiness at this stage? This is the key alternative option, which seems to be preferred by most of the model setups"
    ]
   },
   {
@@ -644,38 +686,6 @@
     "- when the depreciation rate is too low, investment quickly hits its max\n",
     "- when investment cost is too high, we get flat 0 investment and capabilities and happiness decay geometrically towards 0 (with rate dependent on depreciation)\n",
     "- when initial investment cost is too low we get strange behaviour where capabilities goes above 10 (the max limit) and happiness goes to -lots: issue with the optimisation function?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "557030d3",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "60597c1f",
-   "metadata": {},
-   "source": [
-    "### Notes and questions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2c4a3da",
-   "metadata": {},
-   "source": [
-    "It is important to realise the investment schedule we are trying to generate in order to get this happiness U-shape: starts low, then increases, then plateaus/decreases. It is worth thinking about the problem in these terms too."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ae100f9",
-   "metadata": {},
-   "source": [
-    "Question: what is stopping individuals in this model from just accepting that old age will be a period of unhappiness because it is costly to maintain happiness at this stage? This is the key alternative option, which seems to be preferred by most of the model setups"
    ]
   }
  ],
